# poq

./: .gitignore  Cargo.toml  LICENSE  README.md
config/python/: default.toml
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/config/: mod.rs
src/core/: context.rs  generator.rs  language.rs  mod.rs  project.rs
src/languages/: mod.rs
src/languages/python/: mod.rs
src/languages/python/generators/: base.rs  cli.rs  common.rs  data_science.rs  mod.rs  web.rs
src/templating/: engine.rs  mod.rs
src/utils/: file_operations.rs  mod.rs  template_helpers.rs
templates/python/base/: gitignore.template  main.py.template  readme.template
templates/python/cli/: main.py.template
templates/python/data_science/: main.py.template
templates/python/web/fastapi/: main.py.template
tests/: integration_tests.rs
