[package]
name = "poq"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = "0.11.0"
env_logger = "0.11.5"
handlebars = "4.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.10"
